<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView android:id="@+id/rod_activity_edit_brand_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/rod_activity_edit_brand_label"/>
    <EditText android:id="@+id/rod_activity_edit_brand"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/rod_activity_edit_model_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/rod_activity_edit_model_label"/>
    <EditText android:id="@+id/rod_activity_edit_model"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/rod_activity_edit_category_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/rod_activity_edit_category_label"/>
        <EditText android:id="@+id/rod_activity_edit_category"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"/>

    <TextView android:id="@+id/rod_activity_edit_size_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/rod_activity_edit_size_label"/>
        <EditText android:id="@+id/rod_activity_edit_size"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"/>

    <TextView android:id="@+id/rod_activity_edit_line_weight_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/rod_activity_edit_line_weight_label"/>
    <EditText android:id="@+id/rod_activity_edit_line_weight"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"/>

    <TextView android:id="@+id/rod_activity_edit_power_rating_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/rod_activity_edit_power_rating_label"/>
    <EditText android:id="@+id/rod_activity_edit_power_rating"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"/>

    <Button android:id="@+id/rod_activity_edit_save_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rod_activity_edit_save_button"/>

</LinearLayout>